# DupeMole

./: .gitignore  README.md  build.mjs  package.json  release.mjs
desktop/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vitest.config.ts
desktop/src/: App.tsx  index.css
desktop/src/lib/: format.test.ts  format.ts
desktop/src/mocks/: scanResults.ts
desktop/src/organize/: OrganizeContext.test.tsx  OrganizeContext.tsx
desktop/src/pages/: NotFound.tsx
desktop/src/pages/app/: page.tsx
desktop/src/pages/app/components/: AboutView.tsx  AnalysisView.test.tsx  AnalysisView.tsx  CollisionPromptModal.test.tsx  CollisionPromptModal.tsx  CompareView.tsx  CustomFileTypeModal.test.tsx  CustomFileTypeModal.tsx  DebugView.test.tsx  DebugView.tsx  DeleteProgressModal.tsx  DirectoryRow.test.tsx  DirectoryRow.tsx  FileCard.test.tsx  FileCard.tsx  (+24 more)
desktop/src/results/: ResultsContext.tsx  adapter.test.ts  adapter.ts  types.ts  useDelete.ts  useThumbnail.ts
desktop/src/router/: config.tsx
desktop/src/scan/: ScanContext.test.tsx  ScanContext.tsx
desktop/src/settings/: SettingsContext.test.tsx  SettingsContext.tsx  filterPresets.test.ts  filterPresets.ts
desktop/src/stats/: StatsContext.tsx
desktop/src/test/: setup.ts
scripts/: dmole  version.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: analysis.rs  cli_paths.rs  debug.rs  lib.rs  main.rs  media_date.rs  metadata_writer.rs  organize.rs  results.rs  scanner.rs  settings.rs  stats.rs  thumbnails.rs
