[package]
name = "dupemole"
version = "0.0.0"
description = "DupeMole - Find Duplicate Files Fast"
authors = ["DupeMole"]
edition = "2021"

[lib]
name = "dupemole_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
