[package]
name = "dupemole"
version = "0.5.0"
description = "DupeMole - Find Duplicate Files Fast"
authors = ["DupeMole"]
edition = "2021"

[lib]
name = "dupemole_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
blake3 = "1"
rayon = "1"
uuid = { version = "1", features = ["v4", "serde"] }
trash = "5"
kamadak-exif = "0.6"
little_exif = "0.6"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "tiff", "gif", "bmp"] }
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
